--- a/terraform/wazy-ansible/playbooks/inventory.ini
+++ b/terraform/wazy-ansible/playbooks/inventory.ini
@@ -10,7 +10,10 @@ wi1
 wi2
 wi3
 
+[wazuh-agents] 
+agent_1 ansible_host=192.168.0.130
+
 [all:vars]
 ansible_ssh_user=ubuntu
-ansible_ssh_private_key_file=/home/ubuntu/.ssh/id_ed25519
+ansible_ssh_private_key_file=/home/ubuntu/.ssh/ansibleKeys
 ansible_ssh_extra_args='-o StrictHostKeyChecking=no'
