--- a/terraform/wazy-ansible/roles/wazuh/ansible-filebeat-oss/defaults/main.yml
+++ b/terraform/wazy-ansible/roles/wazuh/ansible-filebeat-oss/defaults/main.yml
@@ -1,14 +1,15 @@
 ---
 filebeat_version: 7.10.2
 
-wazuh_template_branch: v5.0.0
+wazuh_template_branch: 4.4
 
 filebeat_node_name: node-1
 
 filebeat_output_indexer_hosts:
-  - "localhost"
+  - "localhost:9200"
 
-filebeat_module_package_name: wazuh-filebeat-0.4.tar.gz
+filebeat_module_package_url: https://packages.wazuh.com/4.x/filebeat
+filebeat_module_package_name: wazuh-filebeat-0.2.tar.gz
 filebeat_module_package_path: /tmp/
 filebeat_module_destination: /usr/share/filebeat/module
 filebeat_module_folder: /usr/share/filebeat/module/wazuh
@@ -22,8 +23,7 @@ filebeat_ssl_dir: /etc/pki/filebeat
 local_certs_path: "{{ playbook_dir }}/indexer/certificates"
 
 filebeatrepo:
-  keyring_path: '/usr/share/keyrings/wazuh.gpg'
-  apt: "deb [signed-by=/usr/share/keyrings/wazuh.gpg] https://packages.wazuh.com/5.x/apt/ stable main"
-  yum: 'https://packages.wazuh.com/5.x/yum/'
+  apt: 'deb https://packages.wazuh.com/4.x/apt/ stable main'
+  yum: 'https://packages.wazuh.com/4.x/yum/'
   gpg: 'https://packages.wazuh.com/key/GPG-KEY-WAZUH'
-  path: '/tmp/WAZUH-GPG-KEY'
+  key_id: '0DCFCA5547B19D2A6099506096B3EE5F29111145'
