--- a/terraform/wazy-ansible/roles/wazuh/ansible-filebeat-oss/tasks/Debian.yml
+++ b/terraform/wazy-ansible/roles/wazuh/ansible-filebeat-oss/tasks/Debian.yml
@@ -9,20 +9,11 @@
   register: filebeat_ca_packages_install
   until: filebeat_ca_packages_install is succeeded
 
-- name: Debian/Ubuntu | Download Filebeat apt key.
-  get_url:
+- name: Debian/Ubuntu | Add Elasticsearch apt key.
+  apt_key:
     url: "{{ filebeatrepo.gpg }}"
-    dest: "{{ filebeatrepo.path }}"
-
-- name: Import Filebeat GPG key
-  command: "gpg --no-default-keyring --keyring gnupg-ring:{{ filebeatrepo.keyring_path }} --import {{ filebeatrepo.path }}"
-  args:
-    creates: "{{ filebeatrepo.keyring_path }}"
-
-- name: Set permissions for Filebeat GPG key
-  file:
-    path: "{{ filebeatrepo.keyring_path }}"
-    mode: '0644'
+    id: "{{ filebeatrepo.key_id }}"
+    state: present
 
 - name: Debian/Ubuntu | Add Filebeat-oss repository.
   apt_repository:
