--- a/terraform/wazy-ansible/roles/wazuh/ansible-wazuh-agent/tasks/Debian.yml
+++ b/terraform/wazy-ansible/roles/wazuh/ansible-wazuh-agent/tasks/Debian.yml
@@ -1,10 +1,4 @@
 ---
-- name: Update apt-get repo and cache
-  apt: 
-    update_cache: yes
-    force_apt_get: yes
-    cache_valid_time: 3600
-  
 - name: Debian/Ubuntu | Install ca-certificates and gnupg
   apt:
     name:
@@ -36,30 +30,16 @@
   when:
     - ansible_distribution == "Ubuntu"
     - ansible_distribution_major_version | int == 14
+    - not wazuh_agent_sources_installation.enabled
     - not wazuh_custom_packages_installation_agent_enabled
 
-- name: Debian/Ubuntu | Download Wazuh repository key
-  get_url:
+- name: Debian/Ubuntu | Installing Wazuh repository key
+  apt_key:
     url: "{{ wazuh_agent_config.repo.gpg }}"
-    dest: "{{ wazuh_agent_config.repo.path }}"
+    id: "{{ wazuh_agent_config.repo.key_id }}"
   when:
     - not (ansible_distribution == "Ubuntu" and ansible_distribution_major_version | int == 14)
-    - not wazuh_custom_packages_installation_agent_enabled
-
-- name: Debian/Ubuntu | Import Wazuh GPG key
-  command: "gpg --no-default-keyring --keyring gnupg-ring:{{ wazuh_agent_config.repo.keyring_path }} --import {{ wazuh_agent_config.repo.path }}"
-  when:
-    - not (ansible_distribution == "Ubuntu" and ansible_distribution_major_version | int == 14)
-    - not wazuh_custom_packages_installation_agent_enabled
-  args:
-    creates: "{{ wazuh_agent_config.repo.keyring_path }}"
-
-- name: Debian/Ubuntu | Set permissions for Wazuh GPG key
-  file:
-    path: "{{ wazuh_agent_config.repo.keyring_path }}"
-    mode: '0644'
-  when:
-    - not (ansible_distribution == "Ubuntu" and ansible_distribution_major_version | int == 14)
+    - not wazuh_agent_sources_installation.enabled
     - not wazuh_custom_packages_installation_agent_enabled
 
 - name: Debian/Ubuntu | Add Wazuh repositories
@@ -69,6 +49,7 @@
     state: present
     update_cache: true
   when:
+    - not wazuh_agent_sources_installation.enabled
     - not wazuh_custom_packages_installation_agent_enabled
 
 - name: Debian/Ubuntu | Set Distribution CIS filename for debian
