--- a/terraform/wazy-ansible/roles/wazuh/ansible-wazuh-agent/tasks/Linux.yml
+++ b/terraform/wazy-ansible/roles/wazuh/ansible-wazuh-agent/tasks/Linux.yml
@@ -5,6 +5,10 @@
 - include_tasks: "Debian.yml"
   when: ansible_os_family == "Debian"
 
+- include_tasks: "installation_from_sources.yml"
+  when:
+    - wazuh_agent_sources_installation.enabled
+
 - include_tasks: "installation_from_custom_packages.yml"
   when:
     - wazuh_custom_packages_installation_agent_enabled
@@ -16,6 +20,7 @@
     lock_timeout: '{{ wazuh_agent_yum_lock_timeout }}'
   when:
     - ansible_os_family|lower == "redhat"
+    - not wazuh_agent_sources_installation.enabled
     - not wazuh_custom_packages_installation_agent_enabled
   tags:
     - init
@@ -27,6 +32,7 @@
     cache_valid_time: 3600
   when:
     - ansible_os_family|lower != "redhat"
+    - not wazuh_agent_sources_installation.enabled
     - not wazuh_custom_packages_installation_agent_enabled
     - not ansible_check_mode
   tags:
@@ -265,7 +271,9 @@
 - include_tasks: "RMRedHat.yml"
   when:
     - ansible_os_family == "RedHat"
+    - not wazuh_agent_sources_installation.enabled
 
 - include_tasks: "RMDebian.yml"
   when:
     - ansible_os_family == "Debian"
+    - not wazuh_agent_sources_installation.enabled
