--- a/terraform/wazy-ansible/roles/wazuh/ansible-wazuh-manager/defaults/main.yml
+++ b/terraform/wazy-ansible/roles/wazuh/ansible-wazuh-manager/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
-wazuh_manager_version: 5.0.0
+
+wazuh_manager_version: 4.4.4
 
 wazuh_manager_fqdn: "wazuh-server"
 wazuh_manager_package_state: present
@@ -8,6 +9,32 @@ wazuh_manager_package_state: present
 wazuh_custom_packages_installation_manager_enabled: false
 wazuh_custom_packages_installation_manager_deb_url: "https://s3-us-west-1.amazonaws.com/packages-dev.wazuh.com/"
 wazuh_custom_packages_installation_manager_rpm_url: "https://s3-us-west-1.amazonaws.com/packages-dev.wazuh.com/"
+
+# Sources installation
+wazuh_manager_sources_installation:
+  enabled: false
+  branch: "v4.4.4"
+  user_language: "en"
+  user_no_stop: "y"
+  user_install_type: "server"
+  user_dir: "/var/ossec"
+  user_delete_dir: null
+  user_enable_active_response: null
+  user_enable_syscheck: "y"
+  user_enable_rootcheck: "y"
+  user_enable_openscap: "n"
+  user_enable_authd: "y"
+  user_generate_authd_cert: null
+  user_update: "y"
+  user_binaryinstall: null
+  user_enable_email: "n"
+  user_auto_start: "y"
+  user_email_address: null
+  user_email_smpt: null
+  user_enable_syslog: "n"
+  user_white_list: "n"
+  user_ca_store: null
+  threads: "2"
 
 wazuh_dir: "/var/ossec"
 
@@ -144,22 +171,34 @@ wazuh_manager_sca:
   time: ''
 
 ## Vulnerability Detector
-filebeat_node_name: node-1
-filebeat_output_indexer_hosts:
-  - "localhost"
-filebeat_output_indexer_port: 9200
-indexer_security_user: admin
-indexer_security_password: changeme
-filebeat_ssl_dir: /etc/pki/filebeat
-
-wazuh_manager_vulnerability_detection:
-  enabled: 'yes'
-  index_status: 'yes'
-  feed_update_interval: '60m'
-
-wazuh_manager_indexer:
-  enabled: 'yes'
-  hosts: "{{ filebeat_output_indexer_hosts }}"
+wazuh_manager_vulnerability_detector:
+  enabled: 'no'
+  interval: '5m'
+  run_on_start: 'yes'
+  providers:
+    - enabled: 'no'
+      os:
+        - 'trusty'
+        - 'xenial'
+        - 'bionic'
+      update_interval: '1h'
+      name: '"canonical"'
+    - enabled: 'no'
+      os:
+        - 'wheezy'
+        - 'stretch'
+        - 'jessie'
+        - 'buster'
+      update_interval: '1h'
+      name: '"debian"'
+    - enabled: 'no'
+      update_from_year: '2010'
+      update_interval: '1h'
+      name: '"redhat"'
+    - enabled: 'no'
+      update_from_year: '2010'
+      update_interval: '1h'
+      name: '"nvd"'
 
 ## Syscheck
 wazuh_manager_syscheck:
@@ -401,8 +440,7 @@ wazuh_manager_config_defaults:
   osquery: '{{ wazuh_manager_osquery }}'
   syscollector: '{{ wazuh_manager_syscollector }}'
   sca: '{{ wazuh_manager_sca }}'
-  vulnerability_detection: '{{ wazuh_manager_vulnerability_detection }}'
-  indexer: '{{ wazuh_manager_indexer }}'
+  vulnerability_detector: '{{ wazuh_manager_vulnerability_detector }}'
   log_level: '{{ wazuh_manager_log_level }}'
   email_level: '{{ wazuh_manager_email_level }}'
   localfiles: '{{ wazuh_manager_localfiles }}'
