--- a/terraform/wazy-ansible/roles/wazuh/ansible-wazuh-manager/tasks/Debian.yml
+++ b/terraform/wazy-ansible/roles/wazuh/ansible-wazuh-manager/tasks/Debian.yml
@@ -24,30 +24,16 @@
   when:
     - ansible_distribution == "Ubuntu"
     - ansible_distribution_major_version | int == 14
+    - not wazuh_manager_sources_installation.enabled
     - not wazuh_custom_packages_installation_manager_enabled
 
-- name: Debian/Ubuntu | Download Wazuh repository key
-  get_url:
+- name: Debian/Ubuntu | Installing Wazuh repository key
+  apt_key:
     url: "{{ wazuh_manager_config.repo.gpg }}"
-    dest: "{{ wazuh_manager_config.repo.path }}"
+    id: "{{ wazuh_manager_config.repo.key_id }}"
   when:
     - not (ansible_distribution == "Ubuntu" and ansible_distribution_major_version | int == 14)
-    - not wazuh_custom_packages_installation_manager_enabled
-
-- name: Debian/Ubuntu | Import Wazuh GPG key
-  command: "gpg --no-default-keyring --keyring gnupg-ring:{{ wazuh_manager_config.repo.keyring_path }} --import {{ wazuh_manager_config.repo.path }}"
-  when:
-    - not (ansible_distribution == "Ubuntu" and ansible_distribution_major_version | int == 14)
-    - not wazuh_custom_packages_installation_manager_enabled
-  args:
-    creates: "{{ wazuh_manager_config.repo.keyring_path }}"
-
-- name: Debian/Ubuntu | Set permissions for Wazuh GPG key
-  file:
-    path: "{{ wazuh_manager_config.repo.keyring_path }}"
-    mode: '0644'
-  when:
-    - not (ansible_distribution == "Ubuntu" and ansible_distribution_major_version | int == 14)
+    - not wazuh_manager_sources_installation.enabled
     - not wazuh_custom_packages_installation_manager_enabled
 
 - name: Debian/Ubuntu | Add Wazuh repositories
@@ -58,6 +44,7 @@
     update_cache: true
   changed_when: false
   when:
+    - not wazuh_manager_sources_installation.enabled
     - not wazuh_custom_packages_installation_manager_enabled
 
 - name: Debian/Ubuntu | Set Distribution CIS filename for Debian/Ubuntu
@@ -111,6 +98,12 @@
   tags:
     - config
 
+- name: Install dependencies to build from sources
+  apt:
+    name: ['make', 'gcc', 'automake', 'autoconf', 'libtool', 'tar', 'libssl-dev', 'g++']
+    state: present
+  when: wazuh_manager_sources_installation.enabled
+
 - name: Debian/Ubuntu | Install wazuh-manager
   apt:
     name:
@@ -118,7 +111,12 @@
     state: present
   tags: init
   when:
+    - not wazuh_manager_sources_installation.enabled
     - not wazuh_custom_packages_installation_manager_enabled
+
+- include_tasks: "installation_from_sources.yml"
+  when:
+    - wazuh_manager_sources_installation.enabled
 
 - include_tasks: "installation_from_custom_packages.yml"
   when:
