--- a/terraform/wazy-ansible/roles/wazuh/wazuh-indexer/tasks/Debian.yml
+++ b/terraform/wazy-ansible/roles/wazuh/wazuh-indexer/tasks/Debian.yml
@@ -19,19 +19,9 @@
 - name: Add Wazuh indexer repository
   block:
     - name: Add apt repository signing key
-      get_url:
+      apt_key:
         url: "{{ wazuh_repo.gpg }}"
-        dest: "{{ wazuh_repo.path }}"
-  
-    - name: Import Wazuh repository GPG key
-      command: "gpg --no-default-keyring --keyring gnupg-ring:{{ wazuh_repo.keyring_path }} --import {{ wazuh_repo.path }}"
-      args:
-        creates: "{{ wazuh_repo.keyring_path }}"
-
-    - name: Set permissions for Wazuh repository GPG key
-      file:
-        path: "{{ wazuh_repo.keyring_path }}"
-        mode: '0644'
+        state: present
 
     - name: Add Wazuh indexer repository
       apt_repository:
