--- a/terraform/classEnvironment/SIEM/tfvars.example
+++ b/terraform/classEnvironment/SIEM/tfvars.example
@@ -3,16 +3,16 @@
 ######################################################################################
 
 
-# pm_api_url           = "https://<IP-HOST:8006/api2/json"
-# pm_api_token_secret  = "TOKEN"
-# pm_api_token_id      = "ID"
-# pm_tls_insecure      = true
-# target_node          = "pve"
-# template_name_ubuntu = "" # Replace with the actual template ID of ubuntu-cloud
-# template_name_kali   = "" # Replace with the actual template ID of kali-cloud   
-# public_ssh_key       = ""
-# private_ssh_key      = ""
-# template_name_ubuntu = "" # Replace with the actual template ID of ubuntu-cloud
-# template_name_kali   = ""     # Replace with the actual template ID of kali-cloud   
-# public_ssh_key       = "" # /home/EXAMPLE/.ssh/ansibleKeys.pub
-# private_ssh_key      = "" # /home/EXAMPLE/.ssh/ansibleKeys
+pm_api_url           = "https://<IP-HOST:8006/api2/json"
+pm_api_token_secret  = "TOKEN"
+pm_api_token_id      = "ID"
+pm_tls_insecure      = true
+target_node          = "pve"
+# Replace with the actual template ID of ubuntu-cloud
+template_name_ubuntu = ""
+# Replace with the actual template ID of kali-cloud
+template_name_kali   = ""
+# Local public key, example: /home/EXAMPLE/.ssh/ansibleKeys.pub
+public_ssh_key       = ""
+# Local private key, example: /home/EXAMPLE/.ssh/ansibleKeys
+private_ssh_key      = ""
