--- a/terraform/wazy-ansible/playbooks/inventory.ini
+++ b/terraform/wazy-ansible/playbooks/inventory.ini
@@ -11,8 +11,8 @@ wi2
 wi3
 
 [wazuh_agents] 
-agent_1 ansible_host=192.168.0.130
-agent_2 ansible_host=192.168.0.120
+agent_1 ansible_host=192.168.0.130 #caldera
+agent_2 ansible_host=192.168.0.120 #ansible
 agent_3 ansible_host=192.168.0.103
 agent_4 ansible_host=192.168.0.104
 agent_5 ansible_host=192.168.0.105
